implement login, sign-up and verify-tokens

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,12 @@
 		"strict": true,
 		"noImplicitReturns": true,
 		"noImplicitAny": true,
-		"module": "CommonJS",
 		"moduleResolution": "node",
-        "allowSyntheticDefaultImports": true,
-		"target": "es5",
+    "allowSyntheticDefaultImports": true,
+		"target": "esnext",
 		"allowJs": true,
 		"jsx": "react",
+		"baseUrl": "./",
 		"paths": {
 			"@client/*": ["./src/client/*"],
 			"@server/*": ["./src/server/*"],
