--- a/package.json
+++ b/package.json
@@ -4,38 +4,67 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node -r tsconfig-paths/register --project tsconfig.server.json src/server/index.ts",
+    "start:watch": "tsnd -r tsconfig-paths/register --project tsconfig.server.json --watch src/server/* src/server/index.ts ",
+    "build": "webpack",
+    "build:watch": "webpack --watch",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^27.0.1",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/pg": "^8.6.1",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.12",
+    "babel-jest": "^27.0.6",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
-    "ts-loader": "^9.2.4",
+    "ts-loader": "^8.2.4",
     "ts-node": "^10.1.0",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.10.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.3.5",
-    "webpack": "^5.47.1",
+    "webpack": "4",
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "@effector/reflect": "^0.6.0",
+    "@types/date-fns": "^2.6.0",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
-    "effector": "^21.8.12",
+    "effector": "21.8.12",
+    "effector-logger": "^0.10.0",
     "effector-react": "^21.3.3",
     "fastify": "^3.19.2",
+    "fastify-cookie": "^5.3.1",
     "fastify-postgres": "^3.5.0",
     "fastify-static": "^4.2.2",
     "io-ts": "^2.2.16",
+    "jsonwebtoken": "^8.5.1",
     "monocle-ts": "^2.3.10",
     "pg": "^8.7.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.3.0"
   }
 }
