a lot of things

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.12",
+    "@typescript-eslint/parser": "^4.31.1",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -35,6 +36,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
+    "trona": "^1.0.0",
     "ts-loader": "^8.2.4",
     "ts-node": "^10.1.0",
     "ts-node-dev": "^1.1.8",
@@ -45,22 +47,24 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "@effector/reflect": "^0.6.0",
+    "@effector/reflect": "^7.0.1",
     "@types/date-fns": "^2.6.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "date-fns": "^2.23.0",
-    "dotenv": "^10.0.0",
-    "effector": "21.8.12",
-    "effector-logger": "^0.10.0",
-    "effector-react": "^21.3.3",
+    "dotenv": "10.0.0",
+    "effector": "^22.1.1",
+    "effector-logger": "^0.12.1",
+    "effector-react": "^22.0.4",
     "fastify": "^3.19.2",
     "fastify-cookie": "^5.3.1",
     "fastify-postgres": "^3.5.0",
     "fastify-static": "^4.2.2",
+    "fp-ts": "^2.11.2",
     "io-ts": "^2.2.16",
     "jsonwebtoken": "^8.5.1",
     "monocle-ts": "^2.3.10",
+    "patronum": "^1.1.0",
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
