--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@effector/babel-plugin": "^0.5.0",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
     "@types/styled-components": "^5.1.15",
+    "babel": "^6.23.0",
+    "babel-plugin-styled-components": "^1.13.3",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
     "jest": "^27.3.1",
